# opengl_function_visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  bundle.ps1  readme.md
shaders/: frag.glsl
src/: main.cpp
src/utils/: FileLoader.cpp  FileLoader.h
